# agentic-memory

./: README.md  duckdb-kuzu-integration.md  memory-design.md  memory-duckdb-schema.sql  memory-extraction-pipeline-v2.md  memory-ontology-examples.cypher  memory-ontology-graph.excalidraw  memory-ontology-kuzu-v3.md  memory-ontology-ladybug-v3.md  memory-ontology-schema.cypher  memory-ontology.excalidraw  memory-ontology.mermaid
alan-memory/: Cargo.toml
alan-memory/crates/alan-cognition/: Cargo.toml
alan-memory/crates/alan-cognition/src/: chunk.rs  context.rs  error.rs  lib.rs  manager.rs
alan-memory/crates/alan-cognition/src/consolidation/: consolidation_decision.rs  embedding_step.rs  entity_resolution.rs  fact_merging.rs  mod.rs  relation_wiring.rs  similarity_detection.rs  unified_process.rs
alan-memory/crates/alan-cognition/src/consolidation/prompt/: consolidation_decision.rs  contradiction.rs  mod.rs  resolution.rs
alan-memory/crates/alan-cognition/src/extraction/: entity_extraction.rs  event_extraction.rs  fact_extraction.rs  memory_extraction.rs  mod.rs  output.rs  unified_extraction.rs  unified_process.rs
alan-memory/crates/alan-cognition/src/extraction/prompt/: coreference.rs  entity.rs  event.rs  fact.rs  memory.rs  mod.rs  unified.rs
alan-memory/crates/alan-cognition/src/forgetting/: certainty_decay.rs  consolidation_candidates.rs  expiration.rs  mod.rs  relevance_scoring.rs
alan-memory/crates/alan-cognition/src/temporal/: causality.rs  mod.rs  ordering.rs  temporal_extraction.rs  time_resolution.rs  validity_wiring.rs
alan-memory/crates/alan-cognition/src/temporal/prompt/: causality.rs  mod.rs  ordering.rs  temporal.rs
alan-memory/crates/alan-cognition/src/traits/: classifier.rs  cognitive_process.rs  embedder.rs  llm.rs  mod.rs  ner.rs
alan-memory/crates/alan-core/: Cargo.toml
alan-memory/crates/alan-core/src/: embedding.rs  error.rs  id.rs  layer.rs  lib.rs  time_tree.rs  universal.rs
alan-memory/crates/alan-core/src/conversation/: conversation.rs  message.rs  mod.rs
alan-memory/crates/alan-core/src/entity/: abstract_time.rs  entity.rs  event.rs  fact.rs  memory.rs  mod.rs  time.rs
alan-memory/crates/alan-core/src/graph/: builder.rs  mod.rs  traits.rs  wiring.rs
alan-memory/crates/alan-core/src/relation/: after.rs  because_of.rs  before.rs  causes.rs  contains.rs  during.rs  has_property.rs  leads_to.rs  mod.rs  prevents.rs  similar.rs  source.rs  supersedes.rs  valid_from.rs  valid_to.rs
alan-memory/crates/alan-memory/: Cargo.toml
alan-memory/crates/alan-memory/src/: config.rs  error.rs  ingest.rs  lib.rs  memory_store.rs  query.rs  scheduler.rs
alan-memory/crates/alan-storage/: Cargo.toml
alan-memory/crates/alan-storage/src/: bridge.rs  error.rs  lib.rs
alan-memory/crates/alan-storage/src/duckdb/: connection.rs  conversation_store.rs  mod.rs  schema.rs
alan-memory/crates/alan-storage/src/ladybugdb/: connection.rs  mod.rs  node_store.rs  relation_store.rs  schema.rs  vector.rs
