[package]
name = "alan-core"
description = "Core ontology types, traits, and graph primitives for the Alan Memory system"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
