[package]
name = "alan-memory"
description = "User-facing memory interface for the Alan Memory system"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
alan-core = { workspace = true }
alan-cognition = { workspace = true }
alan-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
